--- a/contacts/static/css/uliza.css
+++ b/contacts/static/css/uliza.css
@@ -1,5 +1,5 @@
 body {
-    padding: 10px 10px 10px 10px;
+    padding: 1px 10px 10px 10px;
     font-family: "Lato", sans-serif;
     transition: background-color .5s;
 }
@@ -14,6 +14,8 @@ div.navbar {
     width: 0;
     position: fixed;
     z-index: 1;
+    top: 0;
+    left: 0;
     background-color: #111;
     overflow-x: hidden;
     transition: 0.5s;
@@ -45,3 +47,12 @@ div.navbar {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 }
+
+.center {
+    margin: auto;
+    width: 50%;
+    border: 0px solid green;
+    padding 10px, 10px;
+    text-align: center;
+}
+
