--- a/contacts/templates/base.html
+++ b/contacts/templates/base.html
@@ -3,41 +3,47 @@
 <head>
     <title>{% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' type='text/css' href='{% static "css/base.css" %}' />
+    <link rel='stylesheet' type='text/css' href='{% static "css/uliza.css" %}' />
     <link rel='stylesheet' type='text/css' href='{% static "css/bootstrap.min.css" %}' />
     <link rel='stylesheet' type='text/css' href='{% static "css/material.min.css" %}' />
     <script src='{% static "js/bootstrap.min.js" %}' ></script>
-    <script src='{% static "js/base.js" %}' ></script>
+    <script src='{% static "js/uliza.js" %}' ></script>
     <script src='{% static "js/material.min.js" %}' ></script>
+    <!--<script src='{% static "js/jquery-3.3.1.js" %}' ></script>-->
+    <script src='{% static "js/jquery.min.js" %}'></script>
 </head>
 <body>
+<div class="wrapper">
+    <!-- Navigation -->
 <!-- <img src="{% static "images/logo.png" %}" alt="logo" /> -->
 
-	<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0; background-color: #008000">
-            <div id="msidenav" class="sidenav">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="roles">Roles</a>
-                <a href="details">Details</a>
-                <a href="contacts">Contacts</a>
-            </div>
-            <span style="font-size:30px;cursor:pointer;position:fixed;padding-top:15px;" onclick="openNav()">&#9776;</span>
-            <script>
-                function openNav() {
-	            var mNav = document.getElementById("msidenav");
-	            mNav.style.width = "250px";
-                    mNav.style.backgroundColor = "#FFFFFF";
-	            document.getElementById("content-block").style.padding = "10px 300px";
+    <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0; background-color: #008000">
+        <div id="msidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="roles">Roles</a>
+            <a href="details">Details</a>
+            <a href="contacts">Contacts</a>
+        </div>
+        <span style="font-size:30px;cursor:pointer;position:fixed;padding-top:15px;" onclick="openNav()">&#9776;</span>
+        <script>
+            function openNav() {
+	        var mNav = document.getElementById("msidenav");
+	        mNav.style.width = "250px";
+                mNav.style.backgroundColor = "#FFFFFF";
+	        document.getElementById("content-block").style.padding = "10px 300px";
 	        }
-	        function closeNav() {
-	            document.getElementById("msidenav").style.width = "0";
-	            document.getElementById("content-block").style.padding = "10px 10px"
+	    function closeNav() {
+	        document.getElementById("msidenav").style.width = "0";
+	        document.getElementById("content-block").style.padding = "10px 10px"
 	        }
-             </script>
-        </nav>
-	<div id="content-block">
-            {% block content %}{% endblock %}
-	</div>
-          
+        </script>
+    </nav>
+	
+    <div class="content-block">
+        {% block content %}{% endblock %}
+    </div
+
+</div>
     
 </body>
 
