--- a/contacts/templates/contacts/detail.html
+++ b/contacts/templates/contacts/detail.html
@@ -4,11 +4,23 @@
 
 {% block content %}
 
-There are currently no Details, please add a few
+<div id="detail-entries" class="content">
 
-<!-- Colored FAB button with ripple -->
-<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" style="position:absolute;bottom:25%;right:15%;max-width:25%;z-index:1001;background-color:green;">
-  <i class="material-icons">+</i>
-</button>
+    {% for detail in m_detail_list %}
+
+        <p>
+
+            {{ detail.name }}
+
+        </p>
+
+    {% endfor %}
+
+    <!-- Colored FAB button with ripple -->
+    <button onclick="location.href='add'" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" style="position:absolute;bottom:25%;right:15%;max-width:25%;z-index:1001;background-color:green;">
+        <i class="material-icons">+</i>
+    </button>
+
+</div>
 
 {% endblock %}
