--- a/contacts/templates/contacts/add_role.html
+++ b/contacts/templates/contacts/add_role.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class='center'>
-    <h1>Add a new Role</h1>
+    <h1>Add new Role</h1>
 
    <!-- <form method='post' action='http://0.0.0.0:3000/api/v1/content/roles/'>-->
 	<form method='post' action='/roles/add/' >
