--- a/contacts/templates/base.html
+++ b/contacts/templates/base.html
@@ -10,7 +10,7 @@
     <script src='{% static "js/material.min.js" %}' ></script>
     <!--<script src='{% static "js/jquery-3.3.1.js" %}' ></script>-->
     <script src='{% static "js/jquery.min.js" %}'></script>
-    <!--<script src='{% static "js/uliza.js" %}'></script>-->
+    <script src='{% static "js/uliza.js" %}'></script>
 </head>
 <body>
 <div class="wrapper">
