--- a/contacts/templates/contacts/add_contact.html
+++ b/contacts/templates/contacts/add_contact.html
@@ -6,10 +6,11 @@
    
     <h1>Add new Contact</h1>
 
-    <form method='post' action='contacts/add/'>
+    <form id='contact-attrs-form'  method='post' action='contacts/add/'>
 	
-	<!--<input type='submit' value='submit'/>-->
-
+	<!-- Add a roles dropdown list -->
+		
+	<input id="contact-btn" style='display: none;' type='submit' value='submit'/>
 
     </form>
 
@@ -19,9 +20,9 @@
 
     <h1>Contact Attributes</h1>
 
-<div id="attribute"></div>
+<div id="checkboxes"></div>
 
-    <button>Add attribute(s)</button>
+    <button id="attribute-btn">Add attribute(s)</button>
 
 </div>
 
